--- a/app-vim/exheres-syntax/ChangeLog
+++ b/app-vim/exheres-syntax/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-vim/exheres-syntax
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/exheres-syntax/ChangeLog,v 1.7 2009/03/10 22:28:09 gentoofan23 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/exheres-syntax/ChangeLog,v 1.8 2009/10/25 17:09:32 tove Exp $
+
+  25 Oct 2009; Torsten Veller <tove@gentoo.org> metadata.xml:
+  Remove coldwind from metadata.xml (#181764)
 
 *exheres-syntax-20090310 (10 Mar 2009)
 
