--- a/net-proxy/ratproxy/ChangeLog
+++ b/net-proxy/ratproxy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-proxy/ratproxy
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-proxy/cvs-repo/gentoo-x86/net-proxy/ratproxy/ChangeLog,v 1.3 2009/02/05 13:04:09 drizzt Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-proxy/cvs-repo/gentoo-x86/net-proxy/ratproxy/ChangeLog,v 1.4 2009/10/25 20:22:28 tove Exp $
+
+  25 Oct 2009; Torsten Veller <tove@gentoo.org> metadata.xml:
+  Remove drizzt from metadata.xml (#149111)
 
 *ratproxy-1.53 (05 Feb 2009)
 
