--- a/dev-java/jna/ChangeLog
+++ b/dev-java/jna/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jna
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jna/ChangeLog,v 1.2 2009/06/03 20:50:04 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jna/ChangeLog,v 1.3 2009/10/25 21:37:05 volkmar Exp $
+
+  25 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> jna-3.0.3-r1.ebuild:
+  Keywording for ppc, bug 270910
 
 *jna-3.0.3-r1 (03 Jun 2009)
 
