--- a/app-admin/kiosktool/ChangeLog
+++ b/app-admin/kiosktool/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/kiosktool
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/kiosktool/Attic/ChangeLog,v 1.24 2009/07/19 11:42:47 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/kiosktool/Attic/ChangeLog,v 1.25 2009/10/25 23:12:35 abcd Exp $
+
+  25 Oct 2009; Jonathan Callen <abcd@gentoo.org> -kiosktool-1.0.ebuild:
+  Remove old revision
 
   19 Jul 2009; nixnut <nixnut@gentoo.org> kiosktool-1.0-r1.ebuild:
   ppc stable #273348
