--- a/net-analyzer/wireshark/ChangeLog
+++ b/net-analyzer/wireshark/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.190 2009/10/18 14:23:53 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.191 2009/10/26 09:59:21 volkmar Exp $
+
+  26 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> wireshark-1.2.2.ebuild:
+  Stable for ppc, bug 285280
 
   18 Oct 2009; Brent Baude <ranger@gentoo.org> wireshark-1.2.2.ebuild:
   Marking wireshark-1.2.2 ppc64 for bug 285280
