--- a/app-emacs/org-mode/ChangeLog
+++ b/app-emacs/org-mode/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/org-mode
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.82 2009/10/26 13:46:53 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.83 2009/10/26 13:54:48 fauli Exp $
+
+  26 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  -org-mode-6.30e.ebuild:
+  clean up
 
 *org-mode-6.32 (26 Oct 2009)
 
