--- a/dev-ruby/ruby-gettext/ChangeLog
+++ b/dev-ruby/ruby-gettext/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-gettext
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.53 2009/10/20 09:02:52 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.54 2009/10/26 14:24:12 volkmar Exp $
+
+  26 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> ChangeLog:
+  Re-Keywording for ppc, bug 289839
 
 *ruby-gettext-2.0.4 (20 Oct 2009)
 
