--- a/media-libs/lastfmlib/ChangeLog
+++ b/media-libs/lastfmlib/ChangeLog
@@ -1,10 +1,10 @@
 # ChangeLog for media-libs/lastfmlib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/lastfmlib/ChangeLog,v 1.3 2009/10/26 15:49:02 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/lastfmlib/ChangeLog,v 1.4 2009/10/26 15:51:40 ssuominen Exp $
 
   26 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   lastfmlib-0.3.0.ebuild:
-  amd64 stable wrt #290483
+  amd64 stable
 
   13 Jul 2009; Markos Chandras <hwoarang@gentoo.org> lastfmlib-0.3.0.ebuild:
   Remove test use flag since ebuild doesnt use it
