--- a/sys-devel/llvm/ChangeLog
+++ b/sys-devel/llvm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-devel/llvm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/llvm/ChangeLog,v 1.6 2009/10/26 16:16:40 voyageur Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/llvm/ChangeLog,v 1.7 2009/10/26 16:38:22 voyageur Exp $
+
+  26 Oct 2009; Bernard Cafarelli <voyageur@gentoo.org>
+  files/llvm-2.6-commandguide-nops.patch:
+  Fix the patch, after test by flameeyes
 
   26 Oct 2009; Bernard Cafarelli <voyageur@gentoo.org> llvm-2.6.ebuild,
   +files/llvm-2.6-commandguide-nops.patch:
