--- a/media-video/mplayer/ChangeLog
+++ b/media-video/mplayer/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-video/mplayer
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplayer/ChangeLog,v 1.682 2009/10/11 09:15:44 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplayer/ChangeLog,v 1.683 2009/10/26 18:31:31 ssuominen Exp $
+
+*mplayer-1.0_rc4_p20091026 (26 Oct 2009)
+
+  26 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  +mplayer-1.0_rc4_p20091026.ebuild:
+  Version bump.
 
   11 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   mplayer-1.0_rc2_p20090322.ebuild:
