--- a/x11-libs/libXrandr/ChangeLog
+++ b/x11-libs/libXrandr/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXrandr
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXrandr/ChangeLog,v 1.64 2009/10/11 11:11:42 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXrandr/ChangeLog,v 1.65 2009/10/26 20:37:52 jer Exp $
+
+  26 Oct 2009; Jeroen Roovers <jer@gentoo.org> libXrandr-1.3.0.ebuild:
+  Stable for HPPA (bug #282290).
 
   11 Oct 2009; nixnut <nixnut@gentoo.org> libXrandr-1.3.0.ebuild:
   ppc stable #282290
