--- a/x11-apps/xkbevd/ChangeLog
+++ b/x11-apps/xkbevd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xkbevd
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xkbevd/ChangeLog,v 1.26 2009/10/18 21:52:07 remi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xkbevd/ChangeLog,v 1.27 2009/10/26 20:33:37 jer Exp $
+
+  26 Oct 2009; Jeroen Roovers <jer@gentoo.org> xkbevd-1.0.2.ebuild:
+  Stable for HPPA (bug #282290).
 
 *xkbevd-1.1.0 (18 Oct 2009)
 
