--- a/x11-libs/libX11/ChangeLog
+++ b/x11-libs/libX11/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libX11
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.123 2009/10/25 20:42:00 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.124 2009/10/26 20:55:35 jer Exp $
+
+  26 Oct 2009; Jeroen Roovers <jer@gentoo.org> libX11-1.2.2.ebuild:
+  Stable for HPPA (bug #282290).
 
 *libX11-1.3.2 (25 Oct 2009)
 
