--- a/x11-base/xorg-drivers/ChangeLog
+++ b/x11-base/xorg-drivers/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-base/xorg-drivers
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xorg-drivers/ChangeLog,v 1.6 2009/10/11 11:18:21 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xorg-drivers/ChangeLog,v 1.7 2009/10/26 21:08:26 jer Exp $
+
+  26 Oct 2009; Jeroen Roovers <jer@gentoo.org> xorg-drivers-1.6.ebuild:
+  Stable for HPPA (bug #282290).
 
   11 Oct 2009; nixnut <nixnut@gentoo.org> xorg-drivers-1.6.ebuild:
   ppc stable #282290
