--- a/sys-libs/timezone-data/ChangeLog
+++ b/sys-libs/timezone-data/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.206 2009/10/20 16:46:34 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.207 2009/10/27 01:14:26 vapier Exp $
+
+*timezone-data-2009p (27 Oct 2009)
+
+  27 Oct 2009; Mike Frysinger <vapier@gentoo.org>
+  +timezone-data-2009p.ebuild:
+  Version bump #290566 by Rodrigo Severo.
 
 *timezone-data-2009o (20 Oct 2009)
 
