--- a/dev-ruby/tzinfo/ChangeLog
+++ b/dev-ruby/tzinfo/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/tzinfo
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.38 2009/10/25 11:51:47 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.39 2009/10/27 10:06:35 flameeyes Exp $
+
+*tzinfo-0.3.15 (27 Oct 2009)
+
+  27 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  +tzinfo-0.3.15.ebuild:
+  Version bump.
 
   25 Oct 2009; Markus Meier <maekke@gentoo.org> tzinfo-0.3.13.ebuild:
   amd64/x86 stable, bug #282207
