--- a/net-libs/rb_libtorrent/ChangeLog
+++ b/net-libs/rb_libtorrent/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/rb_libtorrent
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/rb_libtorrent/ChangeLog,v 1.66 2009/10/04 14:33:14 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/rb_libtorrent/ChangeLog,v 1.67 2009/10/27 10:39:28 ssuominen Exp $
+
+  27 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  rb_libtorrent-0.14.6.ebuild:
+  amd64 stable wrt #290705
 
   04 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   rb_libtorrent-0.13-r1.ebuild:
