--- a/media-video/cclive/ChangeLog
+++ b/media-video/cclive/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-video/cclive
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/cclive/ChangeLog,v 1.6 2009/10/10 00:42:05 patrick Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/cclive/ChangeLog,v 1.7 2009/10/27 13:01:10 aballier Exp $
+
+*cclive-0.5.3 (27 Oct 2009)
+
+  27 Oct 2009; Alexis Ballier <aballier@gentoo.org> +cclive-0.5.3.ebuild:
+  version bump
 
 *cclive-0.5.2 (10 Oct 2009)
 
