--- a/dev-libs/libcdio/ChangeLog
+++ b/dev-libs/libcdio/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libcdio
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libcdio/ChangeLog,v 1.110 2009/10/27 15:08:00 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libcdio/ChangeLog,v 1.111 2009/10/27 15:08:31 flameeyes Exp $
+
+  27 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
+  Give up maintainership.
 
 *libcdio-0.82 (27 Oct 2009)
 
