--- a/perl-core/Module-CoreList/ChangeLog
+++ b/perl-core/Module-CoreList/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Module-CoreList
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Module-CoreList/ChangeLog,v 1.4 2009/10/23 09:12:03 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Module-CoreList/ChangeLog,v 1.5 2009/10/27 17:27:20 volkmar Exp $
+
+  27 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
+  Module-CoreList-2.22.ebuild:
+  Keywording for ppc.
 
 *Module-CoreList-2.22 (23 Oct 2009)
 
