--- a/perl-core/Module-Load-Conditional/ChangeLog
+++ b/perl-core/Module-Load-Conditional/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Module-Load-Conditional
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Module-Load-Conditional/ChangeLog,v 1.3 2009/10/24 10:43:15 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Module-Load-Conditional/ChangeLog,v 1.4 2009/10/27 17:47:34 volkmar Exp $
+
+  27 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
+  Module-Load-Conditional-0.32.ebuild:
+  Keywording for ppc.
 
 *Module-Load-Conditional-0.32 (24 Oct 2009)
 
