--- a/perl-core/Parse-CPAN-Meta/ChangeLog
+++ b/perl-core/Parse-CPAN-Meta/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Parse-CPAN-Meta
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Parse-CPAN-Meta/ChangeLog,v 1.1 2009/08/10 21:22:45 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Parse-CPAN-Meta/ChangeLog,v 1.2 2009/10/27 17:51:22 volkmar Exp $
+
+  27 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
+  Parse-CPAN-Meta-1.40.ebuild:
+  Keywording for ppc.
 
   10 Aug 2009; Torsten Veller <tove@gentoo.org>
   +Parse-CPAN-Meta-1.39.ebuild, +Parse-CPAN-Meta-1.40.ebuild, +metadata.xml:
