--- a/kde-misc/krecipes/ChangeLog
+++ b/kde-misc/krecipes/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/krecipes
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/krecipes/ChangeLog,v 1.32 2009/10/24 09:33:25 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/krecipes/ChangeLog,v 1.33 2009/10/28 00:39:39 ssuominen Exp $
+
+*krecipes-2.0_alpha4 (28 Oct 2009)
+
+  28 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  +krecipes-2.0_alpha4.ebuild:
+  Version bump.
 
 *krecipes-2.0_alpha3 (24 Oct 2009)
 
