--- a/net-misc/freerdp/ChangeLog
+++ b/net-misc/freerdp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/freerdp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.1 2011/01/21 18:06:13 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.2 2011/02/08 15:58:56 jer Exp $
+
+  08 Feb 2011; Jeroen Roovers <jer@gentoo.org> metadata.xml:
+  Fix addy.
 
 *freerdp-9999 (21 Jan 2011)
 *freerdp-0.8.2 (21 Jan 2011)
