--- a/app-benchmarks/i7z/ChangeLog
+++ b/app-benchmarks/i7z/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-benchmarks/i7z
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-benchmarks/cvs-repo/gentoo-x86/app-benchmarks/i7z/ChangeLog,v 1.1 2011/01/29 15:01:20 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-benchmarks/cvs-repo/gentoo-x86/app-benchmarks/i7z/ChangeLog,v 1.2 2011/02/08 17:55:39 jlec Exp $
+
+  08 Feb 2011; Justin Lecher <jlec@gentoo.org> i7z-0.26.ebuild:
+  Do not install outside EPREFIX
 
 *i7z-0.26 (29 Jan 2011)
 
