--- a/app-i18n/ibus/ChangeLog
+++ b/app-i18n/ibus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/ibus
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/ibus/ChangeLog,v 1.75 2011/01/13 14:51:08 matsuu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/ibus/ChangeLog,v 1.76 2011/02/08 18:20:33 tomka Exp $
+
+  08 Feb 2011; Thomas Kahle <tomka@gentoo.org> ibus-1.3.9.ebuild:
+  x86 stable per bug 344337
 
 *ibus-1.3.99.20101118-r1 (13 Jan 2011)
 *ibus-1.3.9-r1 (13 Jan 2011)
