--- a/dev-python/django/ChangeLog
+++ b/dev-python/django/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/django
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/django/ChangeLog,v 1.62 2011/02/09 04:01:00 arfrever Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/django/ChangeLog,v 1.63 2011/02/09 04:37:42 arfrever Exp $
+
+*django-1.2.5 (09 Feb 2011)
+
+  09 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +django-1.2.5.ebuild:
+  Version bump.
 
 *django-1.1.4 (09 Feb 2011)
 
