--- a/media-libs/libcaca/ChangeLog
+++ b/media-libs/libcaca/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libcaca
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libcaca/ChangeLog,v 1.95 2011/01/29 19:59:14 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libcaca/ChangeLog,v 1.96 2011/02/09 07:53:31 radhermit Exp $
+
+  09 Feb 2011; Tim Harder <radhermit@gentoo.org> libcaca-0.99_beta17.ebuild:
+  Fix compile error when the imlib USE flag is selected and the X USE flag
+  isn't.
 
   29 Jan 2011; Alexis Ballier <aballier@gentoo.org>
   -libcaca-0.99_beta16.ebuild, -libcaca-0.99_beta16-r1.ebuild,
