--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.5023 2011/02/08 22:43:14 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.5024 2011/02/09 08:23:29 suka Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  09 Feb 2011; Andreas Proschofsky <suka@gentoo.org> package.mask:
+  Remove mask on app-office/libreoffice, should be ready for the masses
 
   08 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org> package.mask:
   Fix type for new glib/gtk+ mask.
