--- a/dev-util/buildbot-slave/ChangeLog
+++ b/dev-util/buildbot-slave/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/buildbot-slave
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/buildbot-slave/ChangeLog,v 1.13 2011/02/05 22:56:35 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/buildbot-slave/ChangeLog,v 1.14 2011/02/09 12:53:54 phajdan.jr Exp $
+
+  09 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  buildbot-slave-0.8.3.ebuild:
+  x86 stable wrt bug #352741
 
   05 Feb 2011; Markus Meier <maekke@gentoo.org> buildbot-slave-0.8.3.ebuild:
   arm stable, bug #352741
