--- a/x11-drivers/ati-drivers/ChangeLog
+++ b/x11-drivers/ati-drivers/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/ati-drivers
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.235 2011/01/10 01:31:13 lu_zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.236 2011/02/10 11:30:08 scarabeus Exp $
+
+  10 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org>
+  -ati-drivers-8.780.ebuild:
+  old
 
 *ati-drivers-10.12 (09 Jan 2011)
 
