--- a/mail-client/claws-mail-fancy/ChangeLog
+++ b/mail-client/claws-mail-fancy/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/claws-mail-fancy
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/claws-mail-fancy/ChangeLog,v 1.21 2011/01/15 14:36:42 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/claws-mail-fancy/ChangeLog,v 1.22 2011/02/10 19:45:19 fauli Exp $
+
+  10 Feb 2011; Christian Faulhammer <fauli@gentoo.org>
+  claws-mail-fancy-0.9.10.ebuild, claws-mail-fancy-0.9.11.ebuild,
+  claws-mail-fancy-0.9.12.ebuild:
+  Add webkit-gtk to RDEPEND, too, as observed by Andreas Fink <finkandreas
+  AT web DOT de> in bug 354251
 
   15 Jan 2011; Markus Meier <maekke@gentoo.org> claws-mail-fancy-0.9.12.ebuild:
   x86 stable, bug #350513
