--- a/media-libs/plotutils/ChangeLog
+++ b/media-libs/plotutils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/plotutils
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/plotutils/ChangeLog,v 1.54 2011/02/09 13:07:33 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/plotutils/ChangeLog,v 1.55 2011/02/11 00:00:14 hwoarang Exp $
+
+  10 Feb 2011; Markos Chandras <hwoarang@gentoo.org> plotutils-2.6.ebuild:
+  Stable on amd64 wrt bug #353433
 
   09 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> plotutils-2.6.ebuild:
   x86 stable wrt bug #353433
