--- a/app-cdr/k3b/ChangeLog
+++ b/app-cdr/k3b/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-cdr/k3b
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.260 2011/02/11 13:15:05 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.261 2011/02/11 13:18:52 ssuominen Exp $
+
+  11 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> k3b-2.0.2-r1.ebuild:
+  amd64 stable wrt #354367
 
   11 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> k3b-2.0.2-r1.ebuild:
   x86 stable wrt bug #354367
