--- a/sys-cluster/resource-agents/ChangeLog
+++ b/sys-cluster/resource-agents/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/resource-agents
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/resource-agents/ChangeLog,v 1.5 2011/01/10 09:22:14 ultrabug Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/resource-agents/ChangeLog,v 1.6 2011/02/11 19:12:56 hwoarang Exp $
+
+  11 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
+  resource-agents-1.0.3-r1.ebuild:
+  Stable on amd64 wrt bug #354461
 
 *resource-agents-1.0.3-r1 (10 Jan 2011)
 
