--- a/dev-ruby/rubyforge/ChangeLog
+++ b/dev-ruby/rubyforge/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rubyforge
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.77 2011/02/11 18:09:59 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.78 2011/02/11 19:13:41 hwoarang Exp $
+
+  11 Feb 2011; Markos Chandras <hwoarang@gentoo.org> rubyforge-2.0.4-r1.ebuild:
+  Stable on amd64 wrt bug #354481
 
   11 Feb 2011; Diego E. Pettenò <flameeyes@gentoo.org>
   rubyforge-2.0.4-r2.ebuild:
