--- a/x11-libs/libva/ChangeLog
+++ b/x11-libs/libva/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libva
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libva/ChangeLog,v 1.12 2011/02/03 14:15:01 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libva/ChangeLog,v 1.13 2011/02/11 20:20:40 aballier Exp $
+
+*libva-0.32.0_p1 (11 Feb 2011)
+
+  11 Feb 2011; Alexis Ballier <aballier@gentoo.org> +libva-0.32.0_p1.ebuild:
+  version bump
 
 *libva-0.31.1_p5 (03 Feb 2011)
 
