--- a/dev-ruby/rake-compiler/ChangeLog
+++ b/dev-ruby/rake-compiler/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/rake-compiler
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rake-compiler/ChangeLog,v 1.27 2011/02/11 08:39:44 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rake-compiler/ChangeLog,v 1.28 2011/02/12 08:43:52 graaff Exp $
+
+*rake-compiler-0.7.6 (12 Feb 2011)
+
+  12 Feb 2011; Hans de Graaff <graaff@gentoo.org>
+  +rake-compiler-0.7.6.ebuild:
+  Version bump.
 
   11 Feb 2011; Hans de Graaff <graaff@gentoo.org>
   -rake-compiler-0.7.1.ebuild:
