--- a/app-admin/eselect-opengl/ChangeLog
+++ b/app-admin/eselect-opengl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/eselect-opengl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-opengl/ChangeLog,v 1.74 2011/01/26 19:46:49 grobian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-opengl/ChangeLog,v 1.75 2011/02/12 11:24:38 hwoarang Exp $
+
+  12 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
+  eselect-opengl-1.2.1.ebuild:
+  Stable on amd64 wrt bug #354237
 
   26 Jan 2011; Fabian Groffen <grobian@gentoo.org> eselect-opengl-1.2.1.ebuild:
   Add Prefix keywords
