--- a/x11-apps/x11perf/ChangeLog
+++ b/x11-apps/x11perf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/x11perf
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/x11perf/ChangeLog,v 1.56 2011/01/15 17:50:35 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/x11perf/ChangeLog,v 1.57 2011/02/12 11:25:37 hwoarang Exp $
+
+  12 Feb 2011; Markos Chandras <hwoarang@gentoo.org> x11perf-1.5.3.ebuild:
+  Stable on amd64 wrt bug #354237
 
 *x11perf-1.5.3 (15 Jan 2011)
 
