--- a/x11-apps/xinit/ChangeLog
+++ b/x11-apps/xinit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xinit
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.201 2011/01/22 17:56:44 lxnay Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.202 2011/02/12 11:26:33 hwoarang Exp $
+
+  12 Feb 2011; Markos Chandras <hwoarang@gentoo.org> xinit-1.3.0-r2.ebuild:
+  Stable on amd64 wrt bug #354237
 
 *xinit-1.3.0-r2 (22 Jan 2011)
 
