--- a/x11-apps/xrdb/ChangeLog
+++ b/x11-apps/xrdb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xrdb
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xrdb/ChangeLog,v 1.73 2011/02/04 14:47:58 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xrdb/ChangeLog,v 1.74 2011/02/12 11:27:29 hwoarang Exp $
+
+  12 Feb 2011; Markos Chandras <hwoarang@gentoo.org> xrdb-1.0.8.ebuild:
+  Stable on amd64 wrt bug #354237
 
 *xrdb-1.0.8 (04 Feb 2011)
 
