--- a/x11-libs/libXaw/ChangeLog
+++ b/x11-libs/libXaw/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXaw
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXaw/ChangeLog,v 1.85 2011/01/15 17:44:08 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXaw/ChangeLog,v 1.86 2011/02/12 11:30:53 hwoarang Exp $
+
+  12 Feb 2011; Markos Chandras <hwoarang@gentoo.org> libXaw-1.0.9.ebuild:
+  Stable on amd64 wrt bug #354237
 
 *libXaw-1.0.9 (15 Jan 2011)
 
