--- a/x11-wm/twm/ChangeLog
+++ b/x11-wm/twm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/twm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/twm/ChangeLog,v 1.56 2011/01/15 17:46:21 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/twm/ChangeLog,v 1.57 2011/02/12 11:36:16 hwoarang Exp $
+
+  12 Feb 2011; Markos Chandras <hwoarang@gentoo.org> twm-1.0.6.ebuild:
+  Stable on amd64 wrt bug #354237
 
 *twm-1.0.6 (15 Jan 2011)
 
