--- a/dev-libs/libffi/ChangeLog
+++ b/dev-libs/libffi/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libffi
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.110 2011/02/04 18:40:32 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.111 2011/02/12 16:18:45 ssuominen Exp $
+
+*libffi-3.0.10_rc4 (12 Feb 2011)
+
+  12 Feb 2011; Samuli Suominen <ssuominen@gentoo.org>
+  +libffi-3.0.10_rc4.ebuild:
+  Version bump.
 
 *libffi-3.0.9-r2 (04 Feb 2011)
 
