--- a/virtual/httpd-php/ChangeLog
+++ b/virtual/httpd-php/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for virtual/httpd-php
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/httpd-php/ChangeLog,v 1.12 2011/01/09 18:24:32 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/httpd-php/ChangeLog,v 1.13 2011/02/12 17:08:54 armin76 Exp $
+
+  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> httpd-php-5.3.ebuild:
+  alpha/ia64/s390/sh/sparc stable
 
   09 Jan 2011; Markus Meier <maekke@gentoo.org> httpd-php-5.3.ebuild:
   arm stable
