--- a/x11-apps/fslsfonts/ChangeLog
+++ b/x11-apps/fslsfonts/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/fslsfonts
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/fslsfonts/ChangeLog,v 1.32 2010/12/29 21:16:17 maekke Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/fslsfonts/ChangeLog,v 1.33 2011/02/12 17:38:18 armin76 Exp $
+
+  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> fslsfonts-1.0.3.ebuild:
+  s390/sh/sparc stable wrt #344827
 
   29 Dec 2010; Markus Meier <maekke@gentoo.org> fslsfonts-1.0.3.ebuild:
   arm stable, bug #344827
