--- a/app-crypt/bcwipe/ChangeLog
+++ b/app-crypt/bcwipe/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/bcwipe
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/bcwipe/ChangeLog,v 1.47 2011/01/07 00:30:21 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/bcwipe/ChangeLog,v 1.48 2011/02/12 18:23:03 armin76 Exp $
+
+  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> bcwipe-1.9.7.ebuild:
+  sparc stable wrt #345483
 
   07 Jan 2011; Brent Baude <ranger@gentoo.org> bcwipe-1.9.7.ebuild:
   Marking bcwipe-1.9.7 ppc for bug 345483
