--- a/dev-tex/hevea/ChangeLog
+++ b/dev-tex/hevea/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tex/hevea
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/hevea/ChangeLog,v 1.27 2011/01/13 22:13:45 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/hevea/ChangeLog,v 1.28 2011/02/12 18:45:39 armin76 Exp $
+
+  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> hevea-1.10-r1.ebuild:
+  sparc stable wrt #349631
 
   13 Jan 2011; Brent Baude <ranger@gentoo.org> hevea-1.10-r1.ebuild:
   stable ppc, bug 349631
